Panel pattern added; Whitespace bug fix
panel pattern added;
.hspacing.list-inline fixed;
.nav property added to nav-dropdown

--- a/scss/components/pattern/_list.scss
+++ b/scss/components/pattern/_list.scss
@@ -41,10 +41,20 @@ ul {
 		@include inline-block;
 	}
 
-	> li {                                                  // inline-block hack (only li tag effected)
+	> li {
 		margin-right: -4px;                                 // TODO research, minél fordul elő pontosan
 	}
 }
+
+//	the old way
+/*.list-inline {
+	@extend .list;
+	@include clearfix;
+
+	> * {
+		float: left;
+	}
+}*/
 
 
 //  inline flowing box list
